# test_bot

./: .gitignore  README.md  app.py  config.py  database.py  main.py  my_account.session  pyproject.toml
telegram_bot/: __init__.py  telegram_bot_service.py
